update - videoCard (responsive)

--- a/client/src/components/chipSlider/ChipSlider.module.css
+++ b/client/src/components/chipSlider/ChipSlider.module.css
@@ -1,80 +1,89 @@
 .container {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-left: 0.5em;
   padding-bottom: 0.5em;
   text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  z-index: 3;
 }
 
 .list {
   display: flex;
   align-items: center;
+  max-width: 100%; /*for horizontal centering*/
   list-style: none;
-  max-width: 100%;
   overflow-x: scroll;
   scroll-behavior: smooth;
 }
 
 .list::-webkit-scrollbar {
-  background: transparent;
   -webkit-appearance: none;
   width: 0;
   height: 0;
+  background: transparent;
 }
 
-.list > .chip {
-  border-style: none;
-  margin-right: 12px;
-  background-color: rgb(var(--menu-color));
-  padding: 0.5em;
-  min-width: 5em;
-  height: 2em;
-  border-radius: 5px;
-  font-size: 12px;
-  cursor: pointer;
+.list > .chip,
+.list > .recent {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: calc((var(--videoCard-width)) * 10 / 16);
+  height: calc((var(--videoCard-width)) * 2 / 7);
+  max-height: 2.2em;
+  padding: 0.5em;
+  border-style: none;
+  border-radius: var(--videoCard-radius);
+  margin-right: 0.6em;
+  background-color: rgb(var(--menu-color));
+  font-size: calc((var(--videoCard-width)) * 1 / 10);
+  cursor: pointer;
+}
+
+.list > .recent {
+  border: 1px solid rgb(var(--secondary-text));
+  opacity: 0.6;
 }
 
 .prev,
 .next {
-  border-style: none;
-  background-color: rgb(var(--back-color));
-  height: 1.4em;
-  width: 1.5em;
   position: absolute;
   z-index: 2;
-  text-decoration: none;
-  font-size: 1.5em;
+  width: calc((var(--videoCard-width)) * 2 / 5);
+  height: calc((var(--videoCard-width)) * 2 / 7);
+  max-height: 2.2em;
+  border-style: none;
   color: white;
-  opacity: 0.95;
+  text-decoration: none;
+  font-size: calc((var(--videoCard-width)) * 1 / 6);
   cursor: pointer;
 }
 
 .prev {
-  justify-self: flex-start;
-  text-align: left;
   left: 0;
-  padding-left: 0.1em;
+  padding-left: 0.5em;
+  background: linear-gradient(
+    90deg,
+    rgba(var(--back-color), 1) 65%,
+    rgba(255, 255, 255, 0) 110%
+  );
+  text-align: left;
 }
 
 .next {
   right: 0;
+  padding-right: 0.5em;
+  background: linear-gradient(
+    270deg,
+    rgba(var(--back-color), 1) 65%,
+    rgba(255, 255, 255, 0) 110%
+  );
   text-align: right;
-  padding-right: 0.1em;
 }
 
 .prev:active,
 .next:active {
   transform: translateY(1px);
-}
-
-@media only screen and (min-width: 1440px) {
-  .chip {
-    font-size: 15px;
-  }
 }
