--- a/client/src/screens/moviesScreen/MoviesScreen.module.css
+++ b/client/src/screens/moviesScreen/MoviesScreen.module.css
@@ -1,87 +1,82 @@
 .container {
-  height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
+  width: 100%;
   background-color: rgba(var(--back-color));
 }
 
 .content {
-  height: 100%;
   display: flex;
-}
-
-#editor {
-  height: 100vh;
+  height: 100%;
 }
 
 .center {
-  height: 100vh;
-  width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden; /*!important! for trailer "overflow"*/
   display: flex;
   flex-direction: column;
+  overflow-x: hidden; /*for trailer "overflow"*/
+  overflow-y: auto;
+  width: 100%;
+  height: 100vh;
+  /*   background-color: rgba(var(--back-color)); */
 }
 
 .header {
-  position: sticky !important;
+  position: sticky;
+  z-index: 2;
   top: 0;
   width: 100%;
-  z-index: 2;
 }
 
 .light {
-  height: 100%;
-  width: 100%;
   position: absolute;
-  background-color: rgb(var(--back-color)) !important;
+  z-index: 2;
   top: 0;
   right: 0;
-  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(var(--back-color));
 }
 
 .light_trailer {
-  filter: blur(60px);
-  width: 60%;
-  height: 100%;
   position: absolute;
   z-index: 2;
-  margin-top: -2em;
-  right: 0;
   top: 0;
+  right: 0;
+  width: 60%;
+  height: 100%;
   object-fit: fill;
+  margin-top: -2em;
+  filter: blur(60px);
 }
 
 .preview {
   position: relative;
-  height: fit-content;
-  z-index: 3;
+  z-index: 4;
 }
 
 .closeBtn {
+  position: absolute;
+  z-index: 3;
   width: 1.5em;
   height: 1.5em;
   margin-top: 1em;
   margin-left: 1em;
-  position: absolute;
-  z-index: 3;
   border: none;
-  background-color: transparent;
-  background-repeat: no-repeat;
   background-position: center;
   background-size: 1.5em;
-  transition: 0.2s;
-  cursor: pointer;
+  background-repeat: no-repeat;
+  background-color: transparent;
   background-image: url("../../assets/icons/icon_close.png");
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 .cluster {
-  width: 100%;
-  padding-bottom: 5em;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  position: relative;
-  z-index: 1;
+  width: 100%;
+  padding-bottom: 5em;
 }
