--- a/client/src/components/cardSlider/CardSlider.module.css
+++ b/client/src/components/cardSlider/CardSlider.module.css
@@ -1,40 +1,39 @@
 .container {
+  position: relative;
   display: flex;
   flex-direction: row;
-  height: 8em;
-  position: relative;
-  width: 15em;
-  margin-top: 4em;
-  margin-right: 6em;
+  justify-content: center;
   align-items: center;
+  width: 50%;
 }
 
 .card {
-  width: 8em;
-  aspect-ratio: 2/3;
-  margin: 0.8em;
-  display: flex;
   position: relative;
+  display: flex;
   overflow: hidden;
+  width: 40%;
+  max-width: 9em;
+  aspect-ratio: 2/3;
   border-radius: 5px;
+  margin: 1em;
 }
 
 .prev,
 .next {
-  border-style: none;
-  background-color: rgb(var(--menu-color));
-  height: 1.4em;
-  width: 1.4em;
-  padding-left: 0.3em;
-  padding-right: 0.3em;
-  border-radius: 5px;
   position: relative;
   z-index: 4;
-  cursor: pointer;
+  width: 1.4em;
+  height: 1.4em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  border-style: none;
+  border-radius: 5px;
+  background-color: rgb(var(--menu-color));
+  color: rgb(var(--primary-text));
+  font-size: 1.5rem;
   text-decoration: none;
   text-align: center;
-  font-size: 1.5em;
-  color: white;
+  cursor: pointer;
   opacity: 0.95;
 }
 
@@ -52,61 +51,48 @@
 }
 
 .poster {
-  display: flex;
   position: absolute;
+  display: flex;
+  overflow: hidden;
+  border-radius: 5px;
 }
 
 .poster > img {
   width: 100%;
-  border-radius: 5px;
 }
 
 .info {
   position: absolute;
   z-index: 3;
-  width: 100%;
-  height: 5em;
-  margin-top: 7em;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  background: linear-gradient(
-    0deg,
-    rgba(41, 41, 41, 0.6) 0%,
-    rgba(35, 35, 35, 0.6) 100%
-  );
-  backdrop-filter: blur(10px);
+  bottom: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30%;
+  background: linear-gradient(
+    0deg,
+    rgba(41, 41, 41, 0.95) 0%,
+    rgba(35, 35, 35, 0.95) 100%
+  );
+  backdrop-filter: blur(5px);
 }
 
 .series {
-  font-size: 0.7em;
   color: rgb(var(--secondary-text));
+  font-size: 0.7rem;
 }
 
 .episode {
   margin-top: 0.5em;
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 .counter {
   margin-top: 0.5em;
-  font-size: 0.8em;
   color: rgb(var(--secondary-text));
+  font-size: 0.8rem;
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
-    margin-top: 7em;
-    height: 12;
-    width: 19em;
-  }
-  .card {
-    width: 12em;
-  }
-  .info {
-    height: 9em;
-    margin-top: 11em;
-  }
 }
