--- a/client/src/components/preview/Preview.module.css
+++ b/client/src/components/preview/Preview.module.css
@@ -1,63 +1,60 @@
 .container {
-  width: 100%;
-  height: 42vh;
-  display: flex;
   position: relative;
-  justify-content: flex-end;
   z-index: 1;
+  display: flex;
+  justify-content: flex-end;
   overflow: hidden;
+  width: 100%;
+  height: calc((var(--videoCard-width)) * 13 / 6);
 }
 
 .overlay {
-  height: fit-content;
-  width: 100%;
   position: absolute;
-  left: 0;
   z-index: 2;
+  left: 0;
   display: flex;
-}
-
-.title {
-  margin-top: 0.3em;
-  grid-row: 1;
-  font-size: 1.7em;
+  width: 100%;
+  height: fit-content;
 }
 
 .description {
-  height: fit-content;
   display: grid;
-  margin-left: 3.5em;
   grid-template-rows: repeat(2, 1fr);
-  row-gap: 0.2em;
-  max-width: 30em;
+  row-gap: 0.3em;
+  margin-left: 3.5em;
 }
 
+.title {
+  grid-row: 1;
+  margin-top: 0.3em;
+  font-size: calc((var(--videoCard-width)) * 2 / 9);
+}
 
 .numbers {
   grid-row: 2;
-  height: fit-content;
-  width: fit-content;
   display: flex;
-  font-size: 0.7em;
+  width: fit-content;
+  height: fit-content;
+  font-size: calc((var(--videoCard-width)) * 1 / 11);
 }
 
 .plot {
   grid-row: 3;
-  min-height: 2.2em;
-  margin-top: -1em;
-  margin-bottom: 1em;
-  font-size: 0.8em;
-  display: -webkit-box !important;
+  display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  overflow: hidden;
   text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 1.1em;
+  width: calc((var(--videoCard-width)) * 7 / 2);
+  height: calc(((var(--videoCard-width)) * 2 / 5) + 5px) ;
+  font-size: calc((var(--videoCard-width)) * 1 / 10);
 }
 
 .row {
   grid-row: 4;
   display: flex;
-  margin-top: -0.2em;
+  margin-top: 0.3em;
 }
 
 .col1 > p {
@@ -69,7 +66,7 @@
   display: grid;
   grid-template-rows: repeat(3, 1em);
   row-gap: 0.3em;
-  font-size: 0.9em;
+  font-size: calc((var(--videoCard-width)) * 1 / 9);
 }
 .col2 {
   margin-left: 1em;
@@ -89,6 +86,7 @@
 .year,
 .awards {
   display: flex;
+  margin-top: 0.5em;
 }
 
 .runtime,
@@ -102,11 +100,11 @@
 .rotten,
 .tomatoes,
 .oscar {
-  height: 1em;
-  width: 1.2em;
-  background-repeat: no-repeat;
+  width: calc((var(--videoCard-width)) * 1 / 4);
+  aspect-ratio: 1/1;
   margin-right: 0.5em;
-  background-size: 1.1em;
+  background-size: calc((var(--videoCard-width)) * 1 / 4);
+  background-repeat: no-repeat;
 }
 
 .calendar {
@@ -130,65 +128,53 @@
 
 .oscarCounter {
   display: flex;
-  color: rgb(var(--secondary-text));
   align-items: center;
-  font-size: 0.9em;
-}
-
-.oscar {
-  height: 1.2em;
-  width: 1.2em;
-  background-size: 1.2em;
-  background-image: url("../../assets/icons/oscar.png");
+  color: rgb(var(--secondary-text));
+  font-size: calc((var(--videoCard-width)) * 1 / 7);
 }
 
 .line {
-  height: fit-content;
   display: flex;
+  height: fit-content;
 }
 
 .btns {
   grid-row: 5;
   display: flex;
   justify-content: flex-start;
-  margin-top: 0.5em;
+  margin-top: 1em;
 }
 .progressCol {
   display: flex;
   flex-direction: column;
-  width: 6.5em;
+  max-width: var(--videoCard-width);
   margin-left: 2em;
 }
 
 .progressOnBtn {
-  border-style: none;
+  width: 99.5%;
   height: 2px;
-  width: 98%;
+  border-style: none;
   color: rgb(var(--primary-text));
 }
-.minutesLeft{
-  margin-top: 0.5em;
-  font-size: 0.6em;
+.minutesLeft {
+  margin-top: 0.3em;
+  font-size: calc((var(--videoCard-width)) * 1 / 12);
 }
 
-.play1Btn {
-  font-size: 0.8em;
+.play1Btn,
+.play2Btn {
+  width: var(--videoCard-width);
+  height: calc((var(--videoCard-width)) * 2 / 7);
   border-style: none;
-  border-radius: 3px;
+  border-radius: 2px;
   background-color: rgb(var(--menu-color));
-  width: 8em;
-  height: var(--button-height);
+  font-size: calc((var(--videoCard-width)) * 1 / 10);
   cursor: pointer;
 }
 
 .play2Btn {
-  font-size: 0.8em;
-  border-style: none;
-  border-radius: 3px;
-  background-color: rgb(var(--menu-color));
-  width: 8em;
-  height: calc(var(--button-height) - 1px);
-  cursor: pointer;
+  height: calc(((var(--videoCard-width)) * 2 / 7) - 2px);
 }
 
 .play1Btn:hover,
@@ -197,20 +183,19 @@
 }
 
 .audios {
+  display: block;
+  width: 7em;
   margin-top: 0.5em;
   margin-left: 2em;
-  display: absolute;
-  width: 7em;
-  justify-content: space-between;
 }
 
 .german,
 .english {
-  margin-left: 1em;
-  width: 1.5em;
+  width: calc((var(--videoCard-width)) * 1 / 5);
   aspect-ratio: 1/1;
+  margin-left: 1em;
+  background-size: calc((var(--videoCard-width)) * 1 / 5);
   background-repeat: no-repeat;
-  background-size: 1.5em;
   cursor: pointer;
 }
 
@@ -224,39 +209,38 @@
 
 .videoWall {
   position: absolute;
-  width: 55%;
-  overflow: hidden;
   z-index: -1;
+  overflow: hidden;
+  width: 55%;
 }
 
 .trailer {
+  position: relative;
   width: 100%;
   aspect-ratio: 20/9;
-  position: relative;
   object-fit: fill;
 }
 
 .videoWall > img {
-  width: 13em;
+  width: calc((var(--videoCard-width)) * 2);
   aspect-ratio: 2/3;
 }
 
 .volBtn,
 .muteBtn {
-  border-style: none;
-  border-radius: 2.5em;
-  background-color: rgb(var(--back-color));
+  position: absolute;
   top: var(--bar-size);
   right: 1em;
   width: 2.5em;
   height: 2.5em;
-  cursor: pointer;
-  position: absolute;
-  background-image: url("../../assets/icons/icon_volume_0.png");
-  background-repeat: no-repeat;
+  border-style: none;
+  border-radius: 2.5em;
   background-position: center;
   background-size: 15px;
-  transition: 0.2s;
+  background-repeat: no-repeat;
+  background-image: url("../../assets/icons/icon_volume_0.png");
+  background-color: rgb(var(--back-color));
+  cursor: pointer;
   opacity: 0.7;
 }
 
@@ -266,8 +250,4 @@
 
 .muteBtn {
   background-image: url("../../assets/icons/icon_volume_100.png");
-}
-
-@media only screen and (min-width: 1440px) {
-
 }
