--- a/client/src/components/previewHero/PreviewHero.module.css
+++ b/client/src/components/previewHero/PreviewHero.module.css
@@ -1,58 +1,65 @@
 .container {
-  padding-top: 0.8em;
-  padding-bottom: 0.5em;
-  height: 42vh;
-  position: relative;
-  overflow: hidden;
   display: flex;
   align-items: center;
-  z-index: -1;
+  height: calc((var(--videoCard-width)) * 13 / 6);
+}
+
+.content {
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .row {
   display: flex;
 }
 
-.row:hover span {
+.row:hover {
+  z-index: 2;
+}
+
+.content:hover span {
   animation-play-state: paused;
 }
 
-.firstHalf > span {
-  display: flex;
-  width: 100%;
-  animation: slide linear infinite;
-}
-
+.firstHalf > span,
 .secondHalf > span {
   display: flex;
-  width: 100%;
-  animation: slide linear infinite;
+  margin-top: 0.3em;
+  animation: slideLeft linear infinite;
+}
+
+.thirdHalf > span,
+.fourthHalf > span {
+  display: flex;
+  animation: slideRight linear infinite;
 }
 
 .frame {
-  width: 7em;
+  width: calc((var(--videoCard-width)) * 3 / 5);
   aspect-ratio: 2/3;
-  margin: 0.5em;
-  opacity: 0.7;
+  margin-left: 0.3em;
+  margin-right: 0.3em;
+  opacity: 0.45;
 }
 
 .frame:hover {
-  transform: scale(1.2);
-  opacity: 1;
+  z-index: 2;
+  transform: scale(1.25);
   cursor: pointer;
+  opacity: 1;
 }
 
-.frame:hover .playBtn {
-  visibility: visible;
+.frame:hover img {
+  border: 3px solid rgb(var(--primary-text));
 }
 
 .frame > img {
-  height: 100%;
   width: 100%;
+  height: 100%;
   object-fit: fill;
 }
 
-@keyframes slide {
+@keyframes slideLeft {
   0% {
     transform: translate(0, 0);
   }
@@ -61,6 +68,11 @@
   }
 }
 
-@media only screen and (min-width: 1440px) {
-
+@keyframes slideRight {
+  0% {
+    transform: translate(-100%, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
 }
