--- a/client/src/components/sideEditor/Form.module.css
+++ b/client/src/components/sideEditor/Form.module.css
@@ -1,36 +1,37 @@
 .container {
-  background-color: rgb(var(--menu-color));
-  height: 100%;
-  width: 22em;
   display: flex;
   flex-direction: column;
+  width: 22em;
+  height: 100%;
   padding-bottom: 4em;
+  background-color: rgb(var(--menu-color));
 }
 
 .form {
-  width: 95%;
-  padding-bottom: 4.5em;
-  padding-left: 0.5em;
   overflow-x: hidden;
+  width: 95%;
+  padding-bottom: 5em;
+  padding-left: 0.5em;
+  background-color: rgb(var(--menu-color));
 }
 
 .row {
-  padding-top: 0.1em;
-  width: 100%;
   display: flex;
+  width: 100%;
+  padding-top: 0.1em;
   padding-right: 1em;
 }
 
 .textOnInput {
-  margin-top: 1em;
   position: relative;
+  margin-top: 1em;
 }
 .textOnInput label {
   position: absolute;
+  z-index: 1;
   top: -15px;
   left: 5px;
   padding: 2px;
-  z-index: 1;
   color: rgb(var(--secondary-text));
   font-size: 0.8em;
 }
@@ -41,14 +42,14 @@
 }
 
 .textOnInput label:after {
-  content: " ";
-  background-color: rgb(var(--menu-color));
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
   width: 100%;
   height: 13px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  z-index: -1;
+  background-color: rgb(var(--menu-color));
+  content: " ";
 }
 
 label {
@@ -57,13 +58,13 @@ label {
 }
 
 .inputField {
+  height: 1.7em;
+  padding-left: 0.5em;
+  box-shadow: none;
   border-style: none;
   border-radius: 5px;
   border: 1px solid rgb(var(--secondary-text));
   background-color: rgb(var(--menu-color));
-  box-shadow: none !important;
-  height: 1.7em;
-  padding-left: 0.5em;
 }
 
 .topLeft {
@@ -98,23 +99,24 @@ label {
 }
 
 .inputArea {
+  overflow-y: scroll;
+  resize: none;
+  height: 3.5em;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
+  padding-left: 0.5em;
+  box-shadow: none;
   border-style: none;
   border-radius: 5px;
   border: 1px solid rgb(var(--secondary-text));
   background-color: rgb(var(--menu-color));
-  box-shadow: none !important;
-  height: 3.5em;
-  padding-left: 0.5em;
-  padding-top: 0.3em;
-  padding-bottom: 0.3em;
-  resize: none;
-  overflow-y: scroll;
+
 }
 
 .poster > img {
-  margin-top: 0.3em;
   width: 6.3em;
   aspect-ratio: 2/3;
+  margin-top: 0.3em;
   object-fit: fill;
 }
 
@@ -134,15 +136,15 @@ label {
 }
 
 .bottomRight > .line > .sourceBtn {
-  border-style: none;
-  background-color: rgb(var(--menu-color));
-  background-image: url("../../assets/icons/icon_input_file.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 1.2em;
   width: 1.75em;
   aspect-ratio: 1/1;
-  margin-top: 0.9em;
+  margin-top: 0.7em;
   margin-left: 0.2em;
+  border-style: none;
+  background-position: center;
+  background-size: 1.2em;
+  background-repeat: no-repeat;
+  background-image: url("../../assets/icons/icon_input_file.png");
+  background-color: rgb(var(--menu-color));
   cursor: pointer;
 }
