--- a/client/src/components/toggleBar/ToggleBar.module.css
+++ b/client/src/components/toggleBar/ToggleBar.module.css
@@ -1,22 +1,21 @@
 .container {
-  border: 2px solid rgb(var(--secondary-text));
-  border-radius: 5px;
-  overflow: hidden;
-  height: 1.7em;
-  display: flex;
-  font-size: 0.9em;
-  right: 1em;
   z-index: -1;
+  right: 1em;
+  display: flex;
+  overflow: hidden;
+  height: 2em;
+  border-radius: var(--videoCard-radius);
+  border: 2px solid rgb(var(--secondary-text));
+  font-size: 0.9em;
 }
 
 .btn {
-  width: 90px;
-  display: flex;
-  padding: 10px;
   position: relative;
-  align-items: center;
+  display: flex;
   justify-content: center;
-  border-radius: 5px;
+  align-items: center;
+  width: 90px;
+  border-radius: var(--videoCard-radius);
   transition: background-color 600ms ease, color 600ms ease;
 }
 
@@ -26,9 +25,9 @@
 }
 .toggleLeft + label,
 .toggleRight + label {
-  cursor: pointer;
   min-width: 60px;
   height: 100%;
+  cursor: pointer;
 }
 .toggleLeft + label:hover,
 .toggleRight + label:hover {
@@ -36,14 +35,14 @@
 }
 .toggleLeft + label:after,
 .toggleRight + label:after {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
   background-color: rgb(var(--secondary-text));
   color: rgb(var(--back-color));
   content: "";
-  height: 100%;
-  position: absolute;
   transition: left 200ms /* cubic-bezier(0.77, 0, 0.175, 1) */;
-  width: 100%;
-  z-index: -1;
 }
 .toggleLeft + label {
   border-right: 0;
@@ -59,8 +58,8 @@
 }
 .toggleLeft:checked + label,
 .toggleRight:checked + label {
-  cursor: default;
   color: rgb(var(--back-color));
+  cursor: default;
   transition: color 200ms;
 }
 .toggleLeft:checked + label:after,
