--- a/client/src/components/videoControl/VideoControl.module.css
+++ b/client/src/components/videoControl/VideoControl.module.css
@@ -1,27 +1,26 @@
 .container {
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-  background-color: black;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
 }
 .player {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
   position: relative;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .top {
-  background-color: rgb(var(--menu-color));
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 3em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 .title {
   font-size: 30px;
@@ -30,31 +29,31 @@
 .audioSelect {
   display: flex;
   flex-direction: column;
-  margin-top: 3.1em;
   width: 40px;
+  margin-top: 3.1em;
 }
 
 .dropContent {
-  display: flex;
   position: relative;
+  display: flex;
+  justify-content: space-around;
   width: 7em;
   height: 3em;
-  margin-top: 0.2em;
   padding-top: 0.4em;
-  background-color: rgba(black, 0.7);
-  justify-content: space-around;
   border-radius: 5px;
+  margin-top: 0.2em;
+  background-color: rgba(black, 0.7);
   visibility: hidden;
 }
 
 .german,
 .english {
-  height: 3em;
+  position: relative;
   width: 40px;
+  height: 3em;
   background-size: 40px;
   background-repeat: no-repeat;
   cursor: pointer;
-  position: relative;
 }
 
 .german {
@@ -66,13 +65,13 @@
 }
 
 .controls {
-  height: 100%;
-  width: 22em;
-  margin-right: -1em;
-  padding-left: 1em;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  width: 22em;
+  height: 100%;
+  padding-left: 1em;
+  margin-right: -1em;
 }
 
 .volumeRange {
@@ -89,12 +88,12 @@
   width: 30px;
   height: 30px;
   border: none;
-  background-color: transparent;
-  background-repeat: no-repeat;
   background-position: center;
   background-size: 30px;
-  transition: 0.2s;
+  background-repeat: no-repeat;
+  background-color: transparent;
   cursor: pointer;
+  /*   transition: 0.2s; */
 }
 
 .speechButton {
@@ -135,8 +134,8 @@
 .controls input {
   width: 90px;
   height: 3px;
-  margin-right: 50px;
   margin-top: 20px;
+  margin-right: 50px;
 }
 
 .volume {
@@ -153,11 +152,11 @@
 }
 
 .mid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
 }
 
@@ -166,13 +165,13 @@
 .play,
 .forward {
   border: none;
-  background-color: transparent;
-  background-repeat: no-repeat;
+  margin: 25px;
   background-position: center;
   background-size: 100%;
-  transition: 0.2s;
+  background-repeat: no-repeat;
+  background-color: transparent;
   cursor: pointer;
-  margin: 25px;
+  transition: 0.2s;
 }
 
 .rewind:hover,
@@ -207,26 +206,25 @@
 }
 
 .progress {
-  padding: 0.3em;
   width: 100%;
+  padding: 0.3em;
 }
 
 .progress .seekRange {
-  height: 3px;
   width: 100%;
+  height: 3px;
   cursor: pointer;
 }
 
 .bottom {
   position: absolute;
+  z-index: 2;
   bottom: 0;
-  padding: 0.5em;
-  height: 4em;
   width: 100%;
+  height: 4em;
+  padding: 0.5em;
   display: flex;
   flex-direction: column;
-  z-index: 2;
-  background-color: rgb(var(--menu-color));
 }
 .time {
   position: relative;
@@ -236,13 +234,13 @@
 
 .preview {
   position: absolute;
-  width: 7em;
-  aspect-ratio: 2/1;
   right: 2.5em;
   bottom: 7.5em;
+  width: 7em;
+  aspect-ratio: 2/1;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .preview > img {
@@ -252,17 +250,17 @@
 
 .nextButton,
 .cancelButton {
-  background: transparent;
-  border: none;
-  height: 2em;
-  width: 4em;
-  bottom: -2.5em;
-  font-size: 17px;
-  z-index: 4;
   position: absolute;
-  cursor: pointer;
-  border: 1px solid white;
+  z-index: 4;
+  bottom: -2.5em;
+  border: none;
+  width: 4em;
+  height: 2em;
   border-radius: 5px;
+  border: 1px solid rgba(var(--pimary-text));
+  background: transparent;
+  font-size: 17px;
+  cursor: pointer;
 }
 
 .nextButton:hover,
@@ -284,16 +282,16 @@
 }
 
 .countDown {
-  border: 0;
-  height: 50px;
-  width: 50px;
-  border-radius: 50px;
-  z-index: 5;
   position: absolute;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border: 0;
+  border-radius: 50px;
   background-color: black;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   visibility: hidden;
 }
