--- a/client/src/components/videoWall/VideoWall.module.css
+++ b/client/src/components/videoWall/VideoWall.module.css
@@ -1,9 +1,10 @@
 .container {
-  width: 100%;
-  padding-bottom: 5em;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  position: relative;
-  z-index: 1;
+  width: 100%;
+  padding-top: 0.2em;
+  padding-bottom: 5em;
 }
