--- a/client/src/components/chipSlider/ChipSlider.module.css
+++ b/client/src/components/chipSlider/ChipSlider.module.css
@@ -4,8 +4,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 0.5em;
+  padding-top: 0.5em;
   padding-bottom: 0.5em;
+  padding-left: 0.5em;
   text-align: center;
 }
 
