--- a/client/src/components/preview/Preview.module.css
+++ b/client/src/components/preview/Preview.module.css
@@ -41,20 +41,19 @@
 .plot {
   grid-row: 3;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   overflow: hidden;
   line-height: 1.1em;
-  width: calc((var(--videoCard-width)) * 7 / 2);
-  height: calc(((var(--videoCard-width)) * 2 / 5) + 5px) ;
+  width: calc((var(--videoCard-width)) * 8 / 2);
+  height: calc(((var(--videoCard-width)) * 3 / 5));
   font-size: calc((var(--videoCard-width)) * 1 / 10);
 }
 
 .row {
   grid-row: 4;
   display: flex;
-  margin-top: 0.3em;
 }
 
 .col1 > p {
@@ -142,7 +141,7 @@
   grid-row: 5;
   display: flex;
   justify-content: flex-start;
-  margin-top: 1em;
+  margin-top: 0.7em;
 }
 .progressCol {
   display: flex;
@@ -211,13 +210,13 @@
   position: absolute;
   z-index: -1;
   overflow: hidden;
-  width: 55%;
+  width: 60%;
 }
 
 .trailer {
   position: relative;
   width: 100%;
-  aspect-ratio: 20/9;
+  aspect-ratio: 24/9;
   object-fit: fill;
 }
 
@@ -229,8 +228,8 @@
 .volBtn,
 .muteBtn {
   position: absolute;
-  top: var(--bar-size);
-  right: 1em;
+  right: 1.2em;
+  bottom: 0.3em;
   width: 2.5em;
   height: 2.5em;
   border-style: none;
