--- a/client/src/components/previewHero/PreviewHero.module.css
+++ b/client/src/components/previewHero/PreviewHero.module.css
@@ -49,14 +49,14 @@
   opacity: 1;
 }
 
-.frame:hover img {
-  border: 3px solid rgb(var(--primary-text));
-}
-
 .frame > img {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  image-rendering: crisp-edges;
+}
+
+.frame > img:hover {
+  outline: 3px solid rgb(var(--primary-text));
 }
 
 @keyframes slideLeft {
