--- a/client/src/components/messageBox/MessageBox.module.css
+++ b/client/src/components/messageBox/MessageBox.module.css
@@ -1,40 +1,27 @@
 .container {
   position: absolute;
-  z-index: 4;
+  z-index: 7;
   width: 100%;
-  height: 100%;
+  height: 50em;
   background-color: rgba(white, 0.5);
 }
 
 .frame {
-  position: absolute;
   z-index: 5;
-  top: 40%;
-  left: 35%;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
-  width: 30%;
-  aspect-ratio: 2/1;
+  width: 100%;
+  height: 5em;
   border-radius: 5px;
   background-color: rgba(var(--secondary-text));
 }
 
-.bar {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 2em;
-  background-color: rgba(var(--menu-color));
-}
-
-.messageRow {
-  position: absolute;
-  top: 25%;
-  left: 5%;
+.message{
   display: flex;
-  width: 90%;
-  height: 50%;
+  padding: 1em;
+  margin-bottom: 1.5em;
 }
 
 .symbol {
@@ -55,12 +42,12 @@
 }
 
 .btnsRow {
-  position: absolute;
-  bottom: 0.5em;
-  left: 20%;
+  position: relative;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  width: 60%;
+  width: 10em;
+  margin-left: 2em;
 }
 
 .btn {
