--- a/client/src/components/videoCard/VideoCard.module.css
+++ b/client/src/components/videoCard/VideoCard.module.css
@@ -89,14 +89,15 @@
   width: 30%;
 }
 
-.german, .english {
+.german,
+.english {
   width: calc((var(--videoCard-width)) * 1 / 8);
   aspect-ratio: 1/1;
   background-size: calc((var(--videoCard-width)) * 1 / 8);
   background-repeat: no-repeat;
 }
 
-.german{
+.german {
   background-image: url("../../assets/icons/german.png");
 }
 
