--- a/client/src/screens/moviesScreen/MoviesScreen.module.css
+++ b/client/src/screens/moviesScreen/MoviesScreen.module.css
@@ -16,8 +16,7 @@
   overflow-x: hidden; /*for trailer "overflow"*/
   overflow-y: auto;
   width: 100%;
-  height: 100vh;
-  /*   background-color: rgba(var(--back-color)); */
+  height: 100vh; /*for vertical scrolling*/
 }
 
 .header {
@@ -32,17 +31,17 @@
   z-index: 2;
   top: 0;
   right: 0;
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background-color: rgb(var(--back-color));
 }
 
 .light_trailer {
-  position: absolute;
+  position: relative;
   z-index: 2;
-  top: 0;
-  right: 0;
-  width: 60%;
+  width: 30%;
   height: 100%;
   object-fit: fill;
   margin-top: -2em;
@@ -57,13 +56,13 @@
 .closeBtn {
   position: absolute;
   z-index: 3;
-  width: 1.5em;
-  height: 1.5em;
-  margin-top: 1em;
-  margin-left: 1em;
+  width: 2em;
+  height: 2em;
+  margin-top: 3em;
+  margin-left: 0.5em;
   border: none;
   background-position: center;
-  background-size: 1.5em;
+  background-size: 2em;
   background-repeat: no-repeat;
   background-color: transparent;
   background-image: url("../../assets/icons/icon_close.png");
